# secret_second_chess

./: CMakeLists.txt  main.cpp
chess_API/: board.h  game.h  pieces.h
